// Copyright 2024-2025 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package stats;

option go_package = ".;stats";


// A single span sketch for a metric and timeseries
message SpanSketchProto {
  string metric_name = 1;
  string tid = 2;
  int64 interval = 3;
  // Map of tag key to tag value
  map<string, string> tags = 4;
  // Encoded DDSketch bytes
  bytes sketch = 5;
  int64 total_count = 6;
  int64 error_count = 7;
  int64 exception_count = 8;
  // fingerprint -> exception message
  map<int64, string> exceptions_map = 9;
  // fingerprint -> exception occurrences
  map<int64, int64> exception_counts_map = 10;
}

// Wrapper for a list of span sketches to emit in a single batch
message SpanSketchList {
  repeated SpanSketchProto sketches = 1;
  string customer_id = 2;
}